[package]
name = "cert-dump"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "High-performance X.509 certificate scanner and extractor for binary files"
repository = "https://github.com/19h/cert-dump"
categories = ["command-line-utilities", "cryptography"]
keywords = ["x509", "certificate", "scanner", "pem", "der"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
memchr = "2.7"
der-parser = "9.0"
x509-parser = "0.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
