[package]
name = "cert-dump"
version = "3.0.1"
edition = "2024"
license = "MIT"
description = "High-performance X.509 certificate scanner and extractor for binary files"
repository = "https://github.com/19h/cert-dump"
categories = ["command-line-utilities", "cryptography"]
keywords = ["x509", "certificate", "scanner", "pem", "der"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
memchr = "2.7"
der-parser = "9.0"
x509-parser = "0.16"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
crossbeam-channel = "0.5"
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
